changed background color and our cool chat app color

--- a/chat-client/src/components/layout.css
+++ b/chat-client/src/components/layout.css
@@ -1,7 +1,9 @@
 html {
-  font-family: sans-serif;
+  font-family: ;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background-color: lavenderblush;
+
 }
 body {
   margin: 0;
@@ -227,7 +229,7 @@ h1 {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  color: inherit;
+  color: darkviolet;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
